lavender: overlay: Add support for battery life saver
Change-Id: I066f579aae353b59e25b51e1a63973d0848af057
Signed-off-by: ZeeLog <Danjel.Zammit@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -336,6 +336,14 @@ on post-fs-data
 
     mkdir /data/vendor/secure_element 0777 system system
 
+    # Smart Charging
+    chown system system /sys/class/power_supply/battery/charging_enabled
+    chmod 0666 /sys/class/power_supply/battery/charging_enabled
+    chown system system /sys/class/power_supply/battery/capacity
+    chmod 0666 /sys/class/power_supply/battery/capacity
+    chown system system /sys/class/power_supply/battery/temp
+    chmod 0666 /sys/class/power_supply/battery/temp
+
     # Mark the copy complete flag to not completed
     write /data/vendor/radio/copy_complete 0
     chown radio radio /data/vendor/radio/copy_complete
