--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -84,6 +84,9 @@
             <meta-data
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.sound" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/clear_speaker_summary" />
         </activity>
     </application>
 </manifest>
