lavender: Import Perf blobs from LA.UM.9.2.r1-03500-SDMxx0.0
* Blobs BSP from SLD_sprout 11-RKQ1.210607.001-00WW_3_490-release-keys

Change-Id: I59843a27d271a98706655f7652fd62ecac0d32f3

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -333,6 +333,14 @@ on post-fs-data
     mkdir /data/vendor/fm 0770 system system
     chmod 0770 /data/vendor/fm
 
+    #Create PERFD deamon related dirs
+    mkdir /data/vendor/perfd 0770 root system
+    chmod 2770 /data/vendor/perfd
+    rm /data/vendor/perfd/default_values
+    
+    #Create IOP  deamon related dirs
+    mkdir /data/vendor/iop 0700 root system
+
     mkdir /data/vendor/secure_element 0777 system system
 
     # Mark the copy complete flag to not completed
@@ -559,12 +567,6 @@ service charger /system/bin/charger
     seclabel u:r:charger:s0
 
 service vendor.msm_irqbalance /vendor/bin/msm_irqbalance -f /system/vendor/etc/msm_irqbalance.conf
-    class core
-    user root
-    group root
-    disabled
-
-service vendor.msm_irqbl_sdm630 /vendor/bin/msm_irqbalance -f /system/vendor/etc/msm_irqbalance_sdm630.conf
     class core
     user root
     group root
