--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -437,6 +437,9 @@ on property:sys.boot_completed=1
 
     # This initializes vendor.qti.hardware.perf service
     setprop vendor.post_boot.parsed 1
+    
+    # Enable suspend to RAM
+    write /sys/power/mem_sleep "deep"
 
 on property:persist.vendor.radio.atfwd.start=false
     stop vendor.atfwd
