--- a/rootdir/etc/init.lavender.perf.rc
+++ b/rootdir/etc/init.lavender.perf.rc
@@ -4,6 +4,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+on boot
+    # GPU boost
+    chmod 0660 /sys/class/kgsl/kgsl-3d0/min_pwrlevel
+
 on property:vendor.post_boot.parsed=1
     # Configure scheduler parameters
     write /proc/sys/kernel/sched_downmigrate 85
