--- a/rootdir/etc/init.lavender.perf.rc
+++ b/rootdir/etc/init.lavender.perf.rc
@@ -15,6 +15,13 @@ on property:vendor.post_boot.parsed=1
     write /proc/sys/kernel/sched_autogroup_enabled 0
     write /proc/sys/kernel/sched_walt_rotate_big_tasks 0
 
+    # Setup runtime cpusets
+    write /dev/cpuset/top-app/cpus 0-7
+    write /dev/cpuset/foreground/cpus 0-5,7
+    write /dev/cpuset/background/cpus 0-1
+    write /dev/cpuset/system-background/cpus 0-3
+    write /dev/cpuset/restricted/cpus 2-5
+
     # Disable Core control
     write /sys/devices/system/cpu/cpu0/core_ctl/enable 0
     write /sys/devices/system/cpu/cpu6/core_ctl/enable 0
