lavender: Update perf configs from LA.VENDOR.1.0.r1-15600-WAIPIO.0 to msm8998
* Replace and move in tree

Change-Id: I07a1b3e758c3980dfaa00fc01fc078393995d7bd
Signed-off-by: Vhmit <viktor.9630@hotmail.com>

--- a/rootdir/etc/init.lavender.perf.rc
+++ b/rootdir/etc/init.lavender.perf.rc
@@ -29,3 +29,5 @@ on init
 on property:persist.sys.device_provisioned=1
     setprop dalvik.vm.dex2oat-cpu-set 0,1,2,3,4,5,7
     setprop dalvik.vm.dex2oat-threads 6
+    setprop persist.sys.dalvik.multithread true
+    setprop dalvik.vm.dex2oat-filter speed
